--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,43 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.ts",
-  "author": "Nycheporuk",
-  "license": "MIT",
-  "private": false,
+  "name": "back",
+  "version": "0.0.0",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node --loader ts-node/esm  ./src/app.ts"
+  },
   "dependencies": {
-    "@koa/router": "^10.0.0",
+    "@koa/cors": "^3.1.0",
     "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
+    "koa-helmet": "^6.1.0",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^10.0.0",
+    "koa-session": "^6.2.0",
+    "koa-swagger-decorator": "^1.7.4",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
     "@types/koa": "^2.13.1",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-helmet": "^6.0.2",
+    "@types/koa-json": "^2.0.18",
+    "@types/koa-logger": "^3.1.1",
+    "@types/koa-router": "^7.4.2",
+    "@types/koa-session": "^5.10.3",
+    "@types/koa__cors": "^3.0.2",
+    "@types/node": "^15.0.2",
+    "ts-node": "^9.1.1",
+    "tsc": "^1.20150623.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.2.4"
-  }
+  },
+  "main": "index.ts",
+  "license": "MIT",
+  "author": "Nycheporuk",
+  "private": false
 }
