--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "back",
-  "version": "0.0.0",
-  "type": "commonjs",
+  "name": "typeorm-intro-example",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node --loader ts-node/esm  ./src/app.ts"
+    "start": "tsc-watch --onSuccess \"node dist/index.js\"",
+    "build": "tsc"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "koa": "^2.13.1",
@@ -16,10 +21,9 @@
     "koa-session": "^6.2.0",
     "koa-swagger-decorator": "^1.7.4",
     "mysql": "^2.18.1",
-    "mysql2": "^2.2.5",
-    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.6.2"
+    "tsc-watch": "^4.4.0",
+    "typeorm": "^0.2.34"
   },
   "devDependencies": {
     "@types/koa": "^2.13.1",
@@ -31,13 +35,10 @@
     "@types/koa-session": "^5.10.3",
     "@types/koa__cors": "^3.0.2",
     "@types/node": "^15.0.2",
+    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "tsc": "^1.20150623.0",
     "tslint": "^6.1.3",
     "typescript": "^4.2.4"
-  },
-  "main": "index.ts",
-  "license": "MIT",
-  "author": "Nycheporuk",
-  "private": false
+  }
 }
