--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,24 +7,27 @@
     "build": "craco build"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "antd": "^4.15.4",
+    "axios": "^0.21.1",
     "craco": "^0.0.3",
     "craco-less": "^1.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recoil": "^0.2.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
-    "@types/react-dom": "^17.0.3"
+    "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
